--- a/service.yaml
+++ b/service.yaml
@@ -30,7 +30,7 @@ spec:
   selector:
     app: spring-boot-k8s
   ports:
-    - protocol: "TCP"
+    - protocol: http
       port: 8085 # The port that the service is running on in the cluster
       targetPort: 8085 # The port exposed by the service
   type: ClusterIP # type of the service.
